[package]
name = "dawproject-rs"
version = "0.1.1"
authors = ["Dan K <dankaczor@icloud.com>"]
edition = "2024"

description = "Open exchange format for user data between Digital Audio Workstations (DAWs) based on DawProject in Rust."
homepage = "https://github.com/leichak"
documentation = "https://github.com/leichak/dawproject-rs/README.md"
repository = "https://github.com/leichak/dawproject-rs"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false }
quick-xml = { version = "0.31", features = ["serialize"] }
zip = { version = "0.6.6", default-features = false }
